RESOLVED FIXED171688
Attr Nodes should not have children
https://bugs.webkit.org/show_bug.cgi?id=171688
Summary Attr Nodes should not have children
Chris Dumez
Reported 2017-05-04 13:49:13 PDT
Attr Nodes should not have children as per the latest DOM specification: - https://dom.spec.whatwg.org/#attr In WebKit, we still maintain a text child to indicate the Attr node's value. Firefox and Chrome has followed the latest specification (e.g. trying to append a child to an Attribute node throws a HierarchyErr). Test case: http://jsbin.com/cujuwoxexi/1/edit?html,css,output
Attachments
WIP Patch (421.40 KB, patch)
2017-05-04 19:41 PDT, Chris Dumez
no flags
Patch (452.02 KB, patch)
2017-05-04 20:36 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-04 14:08:42 PDT
Chris Dumez
Comment 2 2017-05-04 19:41:15 PDT
Created attachment 309129 [details] WIP Patch
Chris Dumez
Comment 3 2017-05-04 20:36:40 PDT
Build Bot
Comment 4 2017-05-04 20:41:00 PDT
Attachment 309136 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:16: Please consider whether the use of security-sensitive phrasing could help someone exploit WebKit: security bug [changelog/unwantedsecurityterms] [3] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 5 2017-05-04 21:47:13 PDT
Comment on attachment 309136 [details] Patch Patch looks big but this is mostly due to removing legacy / outdated DOM tests.
Andreas Kling
Comment 6 2017-05-05 11:54:04 PDT
Comment on attachment 309136 [details] Patch r=me Attr is the worst. This is such a nice patch, I am having feelings right now.
Chris Dumez
Comment 7 2017-05-05 12:26:43 PDT
Note You need to log in before you can comment on or make changes to this bug.