Source/WebCore/dom/Attr.cpp
@@ -40,14 +40,14 @@ namespace WebCore {
 using namespace HTMLNames;
 
 Attr::Attr(Element& element, const QualifiedName& name)
-    : ContainerNode(element.document())
+    : Node(element.document(), CreateOther)
     , m_element(&element)
     , m_name(name)
 {
 }
 
 Attr::Attr(Document& document, const QualifiedName& name, const AtomicString& standaloneValue)
-    : ContainerNode(document)
+    : Node(document, CreateOther)
     , m_name(name)
     , m_standaloneValue(standaloneValue)
 {
@@ -55,34 +55,16 @@ Attr::Attr(Document& document, const QualifiedName& name, const AtomicString& st
 
 Ref<Attr> Attr::create(Element& element, const QualifiedName& name)
 {
-    Ref<Attr> attr = adoptRef(*new Attr(element, name));
-    attr->createTextChild();
-    return attr;
+    return adoptRef(*new Attr(element, name));
 }
 
 Ref<Attr> Attr::create(Document& document, const QualifiedName& name, const AtomicString& value)
 {
-    Ref<Attr> attr = adoptRef(*new Attr(document, name, value));
-    attr->createTextChild();
-    return attr;
+    return adoptRef(*new Attr(document, name, value));
 }
 
 Attr::~Attr()
 {
-}
-
-void Attr::createTextChild()
-{
-    ASSERT(refCount());
-    if (!value().isEmpty()) {
-        auto textNode = document().createTextNode(value().string());
-
-        // This does everything appendChild() would do in this situation (assuming m_ignoreChildrenChanged was set),
-        // but much more efficiently.
-        textNode->setParentNode(this);
-        setFirstChild(textNode.ptr());
-        setLastChild(textNode.ptr());
-    }
 }
 
 ExceptionOr<void> Attr::setPrefix(const AtomicString& prefix)
@@ -104,16 +86,11 @@ ExceptionOr<void> Attr::setPrefix(const AtomicString& prefix)
 
 void Attr::setValue(const AtomicString& value)
 {
-    EventQueueScope scope;
-    m_ignoreChildrenChanged++;
-    removeChildren();
     if (m_element) {
         Style::AttributeChangeInvalidation styleInvalidation(*m_element, qualifiedName(), elementAttribute().value(), value);
         elementAttribute().setValue(value);
     } else
         m_standaloneValue = value;
-    createTextChild();
-    m_ignoreChildrenChanged--;
 
     invalidateNodeListAndCollectionCachesInAncestors(&m_name, m_element);
 }
@@ -136,42 +113,7 @@ ExceptionOr<void> Attr::setNodeValue(const String& value)
 
 Ref<Node> Attr::cloneNodeInternal(Document& targetDocument, CloningOperation)
 {
-    Ref<Attr> clone = adoptRef(*new Attr(targetDocument, qualifiedName(), value()));
-    cloneChildNodes(clone);
-    return WTFMove(clone);
-}
-
-// DOM Section 1.1.1
-bool Attr::childTypeAllowed(NodeType type) const
-{
-    return type == TEXT_NODE;
-}
-
-void Attr::childrenChanged(const ChildChange&)
-{
-    if (m_ignoreChildrenChanged > 0)
-        return;
-
-    invalidateNodeListAndCollectionCachesInAncestors(&qualifiedName(), m_element);
-
-    StringBuilder valueBuilder;
-    TextNodeTraversal::appendContents(*this, valueBuilder);
-
-    AtomicString oldValue = value();
-    AtomicString newValue = valueBuilder.toAtomicString();
-    if (m_element)
-        m_element->willModifyAttribute(qualifiedName(), oldValue, newValue);
-
-    if (m_element) {
-        Style::AttributeChangeInvalidation styleInvalidation(*m_element, qualifiedName(), oldValue, newValue);
-        elementAttribute().setValue(newValue);
-    } else
-        m_standaloneValue = newValue;
-
-    if (m_element) {
-        NoEventDispatchAssertion::DisableAssertionsInScope allowedScope;
-        m_element->attributeChanged(qualifiedName(), oldValue, newValue);
-    }
+    return adoptRef(*new Attr(targetDocument, qualifiedName(), value()));
 }
 
 CSSStyleDeclaration* Attr::style()
